# xor

./: Cargo.toml  README.md  intergration.sh
.github/: renovate.json
.github/workflows/: bench.yml  build.yml  release.yml  test.yml
src/: args.rs  buf_pool.rs  local.rs  logger.rs  main.rs  recv_send.rs  shutdown.rs  socket.rs  thread_pool.rs  xor.rs
src/methods/: dns.rs  dns_pad.rs  mod.rs  xor.rs
