[package]
name = "xor"
version = "0.1.6"
edition = "2024"

[features]
io-uring = ["tokio/io-uring"]

[dependencies]
anyhow = "^1"
crossbeam-queue = "^0.3"
env_logger = { version = "^0.11", default-features = false, features = [
    "humantime",
] }
log = "^0.4"
rayon = "^1.11"
socket2 = "^0.6"
supershorty = "^0.2.1"
tokio = { version = "^1.49", default-features = false, features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
