[package]
name = "xor"
version = "0.1.54"
edition = "2024"

[features]
io-uring = ["tokio/io-uring"]
bench = []

[dependencies]
anyhow = "^1"
arrayvec = "^0.7"
coarsetime = "^0.1"
crossbeam-queue = "^0.3"
crossbeam-utils = "^0.8"
env_logger = { version = "^0.11", default-features = false, features = [
    "humantime",
] }
log = "^0.4"
log_limit = { version = "^0.2", default-features = false }
parking_lot = "^0.12"
paste = "^1"
socket2 = "^0.6"
supershorty = "^0.2.4"
tinystr = { version = "^0.8", default-features = false }
tokio = { version = "^1.49", default-features = false, features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
] }
wide = "^1.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
